* fixed issue link was not showing note below chart * changed air velocity to air speed * added in the notes info that tool is calculating relative air speed and dynamic clothing

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -33,7 +33,7 @@ a.mainlink:hover {
   color: rgba(99, 99, 99, 0.56);
 }
 
-.footer {
+.footer, .note-chart {
   font-family: sans-serif;
   font-color: #000000;
   font-size: 0.8rem;
